--- a/index.html
+++ b/index.html
@@ -4,38 +4,52 @@
   <meta charset="UTF-8">
   <title>Buscador de Manzanas por Colonia | SEDEMA CDMX</title>
 
-  <link href="styles.css" rel="stylesheet" />
-
-  <!-- Select2 -->
+  <!-- CSS Select2 -->
   <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-
   <!-- Fuente Roboto -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <!-- Estilos institucionales -->
+  <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
 
 <header>
-  <h1>SEDEMA · Buscador de Manzanas por Colonia</h1>
+  <div class="header-inner">
+    <div class="header-texto">
+      <h1>SEDEMA · Buscador de Manzanas por Colonia</h1>
+      <p>Consulta rápida del número de manzanas urbanas por alcaldía y colonia de la Ciudad de México.</p>
+    </div>
+  </div>
   <div class="linea-oro"></div>
 </header>
 
-<div class="container">
+<main class="container">
 
   <h2>Consulta por alcaldía y colonia</h2>
 
-  <div class="form-row">
-    <label for="munSelector">Alcaldía:</label>
-    <select id="munSelector" style="width:100%"></select>
+  <div class="form-grid">
+    <!-- Select de Alcaldía -->
+    <div class="form-item">
+      <label for="munSelector">Alcaldía</label>
+      <select id="munSelector" style="width:100%"></select>
+      <small class="hint">Escribe el nombre de la alcaldía y selecciónala.</small>
+    </div>
+
+    <!-- Select de Colonia dependiente -->
+    <div class="form-item">
+      <label for="colSelector">Colonia</label>
+      <select id="colSelector" style="width:100%" disabled></select>
+      <small class="hint">Primero elige una alcaldía. Después escribe el nombre de la colonia.</small>
+    </div>
   </div>
 
-  <div class="form-row">
-    <label for="colSelector">Colonia:</label>
-    <select id="colSelector" style="width:100%"></select>
-  </div>
+  <section id="resultado" class="resultado" style="display:none;"></section>
 
-  <div id="resultado" class="resultado" style="display:none;"></div>
+</main>
 
-</div>
+<footer>
+  <p>Herramienta de consulta interna · Secretaría del Medio Ambiente de la Ciudad de México.</p>
+</footer>
 
 <!-- JS -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -45,13 +59,13 @@
 let datos = [];
 let municipios = [];
 
-// Cargar CSV
+// Cargar el CSV
 fetch('manzanas_por_colonia.csv')
   .then(resp => resp.text())
   .then(texto => {
-    const lineas = texto.split(/\r?\n/).map(l => l.trim()).filter(l => l.length > 0);
+    const lineas = texto.split(/\\r?\\n/).map(l => l.trim()).filter(l => l.length > 0);
 
-    // Saltar encabezado
+    // Convertir líneas (saltando encabezado)
     datos = lineas.slice(1).map((l, idx) => {
       const cols = l.split(",");
       return {
@@ -69,7 +83,9 @@ fetch('manzanas_por_colonia.csv')
       .sort((a,b) => a.localeCompare(b, 'es'));
 
     const $mun = $('#munSelector');
-    $mun.append(new Option('', '', true, true)); // placeholder
+
+    // Placeholder vacío
+    $mun.append(new Option('', '', true, true));
 
     municipios.forEach(m => {
       $mun.append(new Option(m, m));
@@ -77,12 +93,14 @@ fetch('manzanas_por_colonia.csv')
 
     $mun.select2({
       placeholder: 'Selecciona una alcaldía…',
-      allowClear: true
+      allowClear: true,
+      width: 'resolve'
     });
 
     $('#colSelector').select2({
       placeholder: 'Primero selecciona una alcaldía…',
-      allowClear: true
+      allowClear: true,
+      width: 'resolve'
     });
   });
 
@@ -90,22 +108,28 @@ fetch('manzanas_por_colonia.csv')
 $('#munSelector').on('change', function() {
   const mun = $(this).val();
   const $col = $('#colSelector');
+
+  // Limpiar y deshabilitar colonia
   $col.empty().trigger('change');
   $('#resultado').hide();
 
   if (!mun) {
+    $col.prop('disabled', true);
     $col.select2({
       placeholder: 'Primero selecciona una alcaldía…',
-      allowClear: true
+      allowClear: true,
+      width: 'resolve'
     });
     return;
   }
 
-  // Filtrar colonias de la alcaldía seleccionada
+  // Filtrar colonias de esa alcaldía
   const colonias = datos
     .filter(d => d.MUN_NAME === mun)
     .sort((a,b) => a.SETT_NAME.localeCompare(b.SETT_NAME, 'es'));
 
+  // Rellenar selector de colonia
+  $col.prop('disabled', false);
   $col.append(new Option('', '', true, true)); // placeholder
 
   colonias.forEach(d => {
@@ -115,7 +139,8 @@ $('#munSelector').on('change', function() {
 
   $col.select2({
     placeholder: 'Selecciona una colonia…',
-    allowClear: true
+    allowClear: true,
+    width: 'resolve'
   });
 });
 
@@ -130,12 +155,12 @@ $('#colSelector').on('change', function() {
   const d = datos[parseInt(idx, 10)];
 
   const html =
-    `<div class='card'>
-        <p><b>Alcaldía:</b> ${d.MUN_NAME}</p>
-        <p><b>Colonia:</b> ${d.SETT_NAME}</p>
-        <p><b>Tipo:</b> ${d.SETT_TYPE}</p>
-        <p><b>Código Postal:</b> ${d.CP}</p>
-        <h3>Número de manzanas: <span class='numero'>${d.MANZANAS}</span></h3>
+    `<div class="card">
+        <p><span class="label">Alcaldía:</span> ${d.MUN_NAME}</p>
+        <p><span class="label">Colonia:</span> ${d.SETT_NAME}</p>
+        <p><span class="label">Tipo:</span> ${d.SETT_TYPE}</p>
+        <p><span class="label">Código Postal:</span> ${d.CP}</p>
+        <h3>Número de manzanas: <span class="numero">${d.MANZANAS}</span></h3>
      </div>`;
 
   $('#resultado').html(html).show();
